test_suite/alan-2022-examples/failing/006180_mutation.alan
source dX begin leave 649 >= > 64 end
